--- a/src/components/messages/messages.css
+++ b/src/components/messages/messages.css
@@ -1,17 +1,11 @@
-.companyName {
-    margin: 20px 0;
-    color: #1a7e76;
-    font-size: 1em;
-    display: compact;
-}
-
-.messageSent {
-    color: #cccccc;
+.messagePostulant {
+    color: #ff0000;
     font-size: 1em;
     font-style: italic;
 }
 
-.postulant {
-    color: #1a7e76;
-    font-size: 0.5em;
+.messageEntreprise {
+    color: #0000ff;
+    font-size: 1em;
+    font-style: italic;
 }
