--- a/src/pages/pagesStyle.css
+++ b/src/pages/pagesStyle.css
@@ -11,6 +11,7 @@
     color: aqua;
     font-size: 2em;
     display: flex;
+    color: bisque;
 }
 
 .button {
@@ -19,3 +20,4 @@
     box-shadow: 0 2px 5px #ccc;
     display : flex;
 }
+
